--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYPROGRAM</title>
-    <link href="../static/css/styles.min.css" rel="stylesheet">
+    <link href="/static/css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             </svg>
         </a>
         <a href="/templates/bookmarks.htmlmarks.html" class="header__bookmark-btn">
-            <img src="../static/img/bookmark.png" alt="" class="header__bookmark-icon" width="28">
+            <img src="/static/img/bookmark.png" alt="" class="header__bookmark-icon" width="28">
             <span class="header__bookmark-counter">3</span>
         </a>
     </div>
