--- a/templates/post.html
+++ b/templates/post.html
@@ -57,7 +57,7 @@
                 <div class="item__comments">
                     {% for comment in comments %}
                     <p class="item__comment">
-                        <b>{{ comment.commrnter_name }}:</b> {{ comment.comment }}
+                        <b>{{ comment.commenter_name }}:</b> {{ comment.comment }}
                     </p>
                     {% endfor %}
 
