--- a/templates/user-feed.html
+++ b/templates/user-feed.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYPROGRAM user feed</title>
-    <link href="../static/css/styles.min.css" rel="stylesheet">
+    <link href="/static/css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             </svg>
         </a>
         <h1 class="header__logo-link">
-            {{ user-name }}
+            {{ user_name }}
         </h1>
     </div>
 </header>
@@ -39,7 +39,7 @@
             <p class="item__descr">{{ post.content[:46] + " ..." }}</p>
             <div class="item__post-info">
                 <div class="item__counter">
-                    <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
+                    <img src="/static/img/eye.png" alt="" class="item__counter-icon" width="26">
                     <span class="item__counter-text">{{ post.views_count }}</span>
                 </div>
             </div>
