--- a/templates/search.html
+++ b/templates/search.html
@@ -36,7 +36,7 @@
             <div class="item__top">
                 <a href="/users/{{ post.poster_name}}" class="item__head">
                     <div class="item__ava-wrap">
-                        <img src="post.poster_avatar" alt="" class="item__ava" width="47">
+                        <img src="{{ post.poster_avatar }}" alt="" class="item__ava" width="47">
                     </div>
                     <span class="item__username">{{ post.poster_name }}</span>
                 </a>
@@ -44,7 +44,7 @@
             <a href="/posts/{{ post.pk }}" class="item__post-link">
                 <img src="{{ post.pic }}" alt="" width="348" class="item__post-img">
             </a>
-            <p class="item__descr"><a href="{{ post.content[:46] + " ..." }}" </p>
+            <p class="item__descr">{{ post.content[:46] + " ..." }}</p>
             <div class="item__post-info">
                 <div class="item__counter">
                     <img src="/static/img/eye.png" alt="" class="item__counter-icon" width="26">
